Updated api CMD

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -4,4 +4,4 @@ COPY . /app
 WORKDIR /app
 RUN pip install -r requirements.txt
 ENV STATUS_FILE /data/status.json
-CMD ["python", "main.py"]
+CMD ["python", "/app/main.py"]
